# SEU-SLAM-BOOK

./: README.md
Calibration/: CMakeLists.txt  Extrinsic.txt
Calibration/conf/: Extrinsic.txt
Calibration/launch/: start.launch
Calibration/src/: Camera.h  Convert.h  DrawImage.h  ICP.h  OpenCVTool.h  Segment.h  Tic_Toc.h  lidarFactor.hpp  main.cpp  main_calibration.cpp
Camera-Lidar-Calibration-master/: Planes.txt  README.md  build.sh  package.xml
Camera-Lidar-Calibration-master/conf/: NDTConfig.txt
Camera-Lidar-Calibration-master/launch/: test.rviz
Camera-Lidar-Calibration-master/src/: 3D3.txt  3D_planar3.txt  CameraCalibrationNew.h  Ceres.h  DealString.h  FileIO.h  PCLlib.h  Util.h  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
Lidar-Camera/DataSample/: README.md
Lidar-Camera/DataSample/lidar_camera_sample_data/: CMakeLists.txt  Config.txt  README.md  package.xml
Lidar-Camera/DataSample/lidar_camera_sample_data/include/: DrawImg.h  FileIO.h  Tic_Toc.h  Types.h
Lidar-Camera/DataSample/lidar_camera_sample_data/launch/: config.rviz  read.launch  start.launch  start_sensors.launch
Lidar-Camera/DataSample/lidar_camera_sample_data/msg/: Sampledata.msg
Lidar-Camera/DataSample/lidar_camera_sample_data/src/: main.cpp  read.cpp  visualizer.cpp
Lidar-Camera/DataSample/lidar_camera_sample_data/srv/: Order.srv
Lidar-Camera/DataSample/unicore/: CMakeLists.txt  package.xml  readme.md
Lidar-Camera/DataSample/unicore/include/unicore/: Imu.h  msg_buffer.hpp  parse_sentence.hpp  unicore_message_extractor.hpp
Lidar-Camera/DataSample/unicore/launch/: startgnssimu.launch
Lidar-Camera/DataSample/unicore/msg/: RawImu.msg
Lidar-Camera/DataSample/unicore/src/: msg_buffer.cpp  parse_sentence.cpp  unicore_message_extractor.cpp
Lidar-Camera/DataSample/unicore/test/: test_parse.cpp
PGO/: dataCERES_LM.txt
PGO/data/: KITTI_00_cs.g2o  KITTI_00_gt.g2o  KITTI_00_vo.g2o  KITTI_02_vo.g2o  Loop_after.txt  ORB_DL.txt  ORB_LM.txt  Pittsburgh_A_GPGO_GT.g2o  Pittsburgh_A_gt.g2o  Pittsburgh_B_GPGO_OPT.g2o  Pittsburgh_C_GPGO_OPT.g2o  Pittsburgh_C_gt.g2o  Strong_after.txt  TheHague_02_gt.g2o  TheHague_02_vo.g2o  Tree_after.txt  freiburg1_room_CameraTrajectory.txt  freiburg2_desk_CameraTrajectory.txt  freiburg3_long_office_CameraTrajectory.txt  freiburg3_long_office_gt.txt  sphere_cs.g2o  sphere_gt.g2o
PGO/data/shellFor_freiburg1_room/: shellForGTSAM  shellForORB  shellForOur
PGO/data/shellFor_freiburg2_desk/: shellForCERES  shellForGTSAM  shellForOur  shellForStateRobot
PGO/data/shellFor_freiburg3_longoffice/: shellForORB
PGO/matlab_code/Plot_for_copslam/: ATE_error.m  parseG2OFile.m  plotLops.m  readme.txt
PGO/matlab_code/Plot_for_copslam/figures/: Pittsburgh_B_GPGO.fig  Pittsburgh_C_GPGO.fig  Pittsburgh_C_loop.fig  freiburg2_desk.fig  freiburg3_long_office.fig
PGO/outlier_data/: KITTI02.txt  P_A.txt  P_B.txt
PGO/src/: .posegraph.cpp-NSConflict-Vigorbird-linux4.4.0-92-generic.kate-swp  Error.h  FileIO.h  LAGO_linear.h  Optimizer.h  iSAM_posegraph.h  types.h
PGO/显示李群李代数代码/: plotLi.m
TLS/: CMakeLists.txt
TLS/Data/: Noise.txt
TLS/src/: FileIO.h  TLS.cpp  Tic_Toc.h  convert.h  icp.h  icpTLS.h
posegraph/: CMakeLists.txt  dataCERES_DL.txt  dataCERES_GN.txt  评测rgbd误差命令
posegraph/data/: CERES_DL.txt  CERES_GN.txt  CERES_LM.txt  GTSAM_GN.txt  GTSAM_LM.txt  KITTI_02_cs.g2o  KITTI_02_gt.g2o  KeyFrame.txt  KeyFrame_after.txt  Loop.txt  NewCollege_gt.g2o  ORB_GN.txt  Our_DL.txt  Our_GN.txt  Our_LM.txt  Pittsburgh_A_GPGO_OPT.g2o  Pittsburgh_A_cs.g2o  Pittsburgh_A_vo.g2o  Pittsburgh_B_GPGO_GT.g2o  Pittsburgh_B_gt.g2o  Pittsburgh_C_GPGO_GT.g2o  StateRobot_DL.txt  StateRobot_GN.txt  StateRobot_LM.txt  Strong.txt  TheHague_02_cs.g2o  Tree.txt  freiburg1_room_gt.txt  freiburg1_room_vo.txt  freiburg2_desk_vo.txt  freiburg3_long_office_vo.txt  sphere_vo.g2o
posegraph/data/shellFor_freiburg1_room/: shellForCERES  shellForStateRobot
posegraph/data/shellFor_freiburg2_desk/: shellForORB
posegraph/data/shellFor_freiburg3_longoffice/: shellForCERES  shellForGTSAM  shellForOur  shellForStateRobot
posegraph/matlab_code/Plot_for_copslam/: PlotForPittsburgh.m  PlotForTUM.m  parseTUMFile.m  plot3Tracks.m  plot_subsetTrack.m  plotoneTrack.m  plottwoTracks.m  showG2OFiles_main.m
posegraph/matlab_code/Plot_for_copslam/figures/: Pittsburgh_A.fig  Pittsburgh_A_GPGO.fig  Pittsburgh_A_loop.fig  Pittsburgh_B.fig  Pittsburgh_B_loop.fig  Pittsburgh_C.fig  freiburg1_room.fig
posegraph/matlab_code/plot_for_outlier/: main.m
posegraph/outlier_data/: KITTI00.txt  P_C.txt
posegraph/src/: Ceres_posegraph.h  G2OEdge.h  ICP.h  posegraph.cpp
posegraph/显示李群李代数代码/: parseLIFile.m  showLi.m
