<?xml version="1.0"?>
<package format="2">
  <name>camera_lidar_sample_data</name>
  <version>1.0.0</version>
  <description>
    This package is used to obtain lidar and camera data
  </description>
  <maintainer email="fengyyml@163.com">Youyang Feng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
